[project]
name = "telegram-info-api"
version = "1.0.0"
description = "Advanced Telegram entity information retrieval API using FastAPI and Pyrogram"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pyrogram",
    "tgcrypto",
    "python-dateutil",
    "pydantic",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["templates*", "static*", "assets*", "frontend*", "tests*", "__pycache__*"]